:sparkles: login fuction

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,7 @@
 </body>
 <script type="text/javascript">
     let body = document.getElementById("body");
-    body.innerHTML = '<iframe src="./views/login.html" width="100%" height="100%"></iframe>'
-    //body.innerHTML = '<object type="text/html" class="view" data="./views/login.html" ></object>';
-
-    
+    body.innerHTML = '<object type="text/html" class="view" data="./views/login.html" ></object>';
 </script>
 
 </html>
