:pencil: coments added

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,12 @@
 <body>
     <div id="body" class="body"></div>
 </body>
-<script type="text/javascript">
+<script type="text/javascript"> 
     let body = document.getElementById("body");
     body.innerHTML = '<object type="text/html" class="view" data="./views/login.html" ></object>';
 </script>
+<!--bloque de script es ejectubale-->
+<!--atributo "type" significa el lenguaje del código escrito dentro de script-->
+<!--getElementById es para captar una referencia de un contenedor por ejemplo-->
 
 </html>
